force-app/main/default/objects/BusinessLicenseApplication/fields/CC_PWS_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_PWS_Number__c</fullName>
    <label>PWS(Public Water Source) Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>