force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Reason_for_Staff_Amendment__c.field-meta.xml
<CustomField>
    <fullName>CC_Reason_for_Staff_Amendment__c</fullName>
    <label>Reason for Staff Amendment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add New Member</fullName>
            </value>
            <value>
                <fullName>Mark Existing Member(s) as Inactive</fullName>
            </value>
            <value>
                <fullName>Role/Details Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>