force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>CC_Rejection_Reason__c</fullName>
    <label>Rejection Reason Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>