force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>