force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Street_Address__c</fullName>
    <inlineHelpText>Street Address of Registered or Certified Child Care Provider</inlineHelpText>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>