force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Submitted_Date__c</fullName>
    <label>Application Submission Date</label>
    <type>DateTime</type>
</CustomField>