force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Supervisor_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Supervisor_Status__c</fullName>
    <label>Supervisor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>