force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Termination_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Termination_Close_Date__c</fullName>
    <label>Termination/Close Date</label>
    <type>Date</type>
</CustomField>