force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Toddler_Preschool_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CC_Toddler_Preschool_Capacity__c</fullName>
    <label>Toddler/Preschool Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>