force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Total_Licensed_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CC_Total_Licensed_Capacity__c</fullName>
    <label>Total Licensed Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>