force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Transport_means_to_Offsite_location__c.field-meta.xml
<CustomField>
    <fullName>CC_Transport_means_to_Offsite_location__c</fullName>
    <label>Transport means to Offsite play location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walking</fullName>
            </value>
            <value>
                <fullName>Personal Vehicle</fullName>
            </value>
            <value>
                <fullName>Public Transit</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>