force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Transportation_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Transportation_Type__c</fullName>
    <label>Transportation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Owned</fullName>
            </value>
            <value>
                <fullName>Subcontract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>