force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Type_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>CC_Type_Of_Change__c</fullName>
    <label>CC Type Of Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Director Name</fullName>
            </value>
            <value>
                <fullName>Facility Name</fullName>
            </value>
            <value>
                <fullName>Ages Cared For</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Number of Children</fullName>
            </value>
            <value>
                <fullName>Days/Hours of Operation</fullName>
            </value>
            <value>
                <fullName>Address Information</fullName>
            </value>
            <value>
                <fullName>Status Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>