force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Under_Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Under_Review_End_Date__c</fullName>
    <label>Under Review End Date</label>
    <type>DateTime</type>
</CustomField>