force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Use_Alcohol_Narcotics_or_Drugs__c.field-meta.xml
<CustomField>
    <fullName>CC_Use_Alcohol_Narcotics_or_Drugs__c</fullName>
    <label>Use Alcohol Narcotics or Drugs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>