force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Use_Burning_Stoves_During_Child_Care__c.field-meta.xml
<CustomField>
    <fullName>CC_Use_Burning_Stoves_During_Child_Care__c</fullName>
    <label>Use Burning Stoves During Child Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>