force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Washes_hands_before_food_prep__c.field-meta.xml
<CustomField>
    <fullName>CC_Washes_hands_before_food_prep__c</fullName>
    <inlineHelpText>Does the provider wash hands thoroughly, before preparing food?</inlineHelpText>
    <label>Washes hands before food prep?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>