force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Water_Supply_Source__c.field-meta.xml
<CustomField>
    <fullName>CC_Water_Supply_Source__c</fullName>
    <label>Water Supply Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Water Supply (such as well)</fullName>
            </value>
            <value>
                <fullName>Public Water Supply (Town Water)</fullName>
            </value>
            <value>
                <fullName>Private Water Supply</fullName>
                <isActive>false</isActive>
                <label>Private Water Supply</label>
            </value>
            <value>
                <fullName>Town Water Supply</fullName>
                <isActive>false</isActive>
                <label>Town Water Supply</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>