force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Where_and_when_date_s__c.field-meta.xml
<CustomField>
    <fullName>CC_Where_and_when_date_s__c</fullName>
    <label>Where and when date(s)</label>
    <type>TextArea</type>
</CustomField>