force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Withdraw_Reason__c.field-meta.xml
<CustomField>
    <fullName>CC_Withdraw_Reason__c</fullName>
    <label>Withdraw Reason</label>
    <type>TextArea</type>
</CustomField>