force-app/main/default/objects/BusinessLicenseApplication/fields/Children_for_who_care_provided_Old__c.field-meta.xml
<CustomField>
    <fullName>Children_for_who_care_provided_Old__c</fullName>
    <label>Children for who care provided Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>