force-app/main/default/objects/BusinessLicenseApplication/fields/Criminal_charges_against_family__c.field-meta.xml
<CustomField>
    <fullName>Criminal_charges_against_family__c</fullName>
    <label>Criminal charges against family?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>