force-app/main/default/objects/BusinessLicenseApplication/fields/Denied_or_revoked_child_care_license__c.field-meta.xml
<CustomField>
    <fullName>Denied_or_revoked_child_care_license__c</fullName>
    <label>Denied or revoked child care license?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>