force-app/main/default/objects/BusinessLicenseApplication/fields/Drug_or_felony_conviction__c.field-meta.xml
<CustomField>
    <fullName>Drug_or_felony_conviction__c</fullName>
    <label>Drug or felony conviction?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>