force-app/main/default/objects/BusinessLicenseApplication/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <label>Facility Name</label>
    <type>TextArea</type>
</CustomField>