force-app/main/default/objects/BusinessLicenseApplication/fields/Follow_up_Email_for_Additional_Info_Sub__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Email_for_Additional_Info_Sub__c</fullName>
    <label>Follow up Email for Additional Info Sub</label>
    <type>Date</type>
</CustomField>