force-app/main/default/objects/BusinessLicenseApplication/fields/Have_you_been_licensed_to_care_for_child__c.field-meta.xml
<CustomField>
    <fullName>Have_you_been_licensed_to_care_for_child__c</fullName>
    <inlineHelpText>Have you been registered or licensed to care for children, in Montana or any other State?</inlineHelpText>
    <label>Have you been licensed to care for child</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>