force-app/main/default/objects/BusinessLicenseApplication/fields/Have_you_ever_had_a_child_removed_by_CFS__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_had_a_child_removed_by_CFS__c</fullName>
    <label>Have you ever had a child removed by CFS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>