force-app/main/default/objects/BusinessLicenseApplication/fields/Have_you_lived_in_another_state_recently__c.field-meta.xml
<CustomField>
    <fullName>Have_you_lived_in_another_state_recently__c</fullName>
    <label>Have you lived in another state recently</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>