force-app/main/default/objects/BusinessLicenseApplication/fields/Have_you_or_anyone_here_been_convicted__c.field-meta.xml
<CustomField>
    <fullName>Have_you_or_anyone_here_been_convicted__c</fullName>
    <label>Have you or anyone here been convicted?</label>
    <type>TextArea</type>
</CustomField>