force-app/main/default/objects/BusinessLicenseApplication/fields/Have_you_or_your_Center_faced_abuse_inve__c.field-meta.xml
<CustomField>
    <fullName>Have_you_or_your_Center_faced_abuse_inve__c</fullName>
    <label>Have you or your Center faced abuse inve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>