force-app/main/default/objects/BusinessLicenseApplication/fields/Licensing_Application_Withdrawal_reasons__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Application_Withdrawal_reasons__c</fullName>
    <label>Licensing Application Withdrawal reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Application assistance needed</fullName>
            </value>
            <value>
                <fullName>Care was not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>