force-app/main/default/objects/BusinessLicenseApplication/fields/Maximum_Age_Limit_Requested_Years_Old__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age_Limit_Requested_Years_Old__c</fullName>
    <label>Maximum Age Limit Requested - Years Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>