force-app/main/default/objects/BusinessLicenseApplication/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Owner:User.Id, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>