force-app/main/default/objects/BusinessLicenseApplication/fields/Please_Explain_One__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain_One__c</fullName>
    <label>Please Explain</label>
    <type>TextArea</type>
</CustomField>