force-app/main/default/objects/BusinessLicenseApplication/fields/Previous_Facility_Location__c.field-meta.xml
<CustomField>
    <fullName>Previous_Facility_Location__c</fullName>
    <label>Previous Facility Location</label>
    <type>Address</type>
</CustomField>