force-app/main/default/objects/BusinessLicenseApplication/fields/What_is_your_relationship_with_the_child__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_relationship_with_the_child__c</fullName>
    <label>What is your relationship with the child</label>
    <type>TextArea</type>
</CustomField>