force-app/main/default/objects/BusinessLicenseApplication/fields/What_type_of_regis_or_lic_did_you_have__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_regis_or_lic_did_you_have__c</fullName>
    <label>What type of regis or lic did you have</label>
    <type>TextArea</type>
</CustomField>