force-app/main/default/objects/BusinessLicenseApplication/fields/When_were_you_licensed_or_registered__c.field-meta.xml
<CustomField>
    <fullName>When_were_you_licensed_or_registered__c</fullName>
    <label>When were you licensed or registered?</label>
    <type>Date</type>
</CustomField>