force-app/main/default/objects/BusinessLicenseApplication/fields/When_Where_and_Why__c.field-meta.xml
<CustomField>
    <fullName>When_Where_and_Why__c</fullName>
    <label>When, Where and Why?</label>
    <type>TextArea</type>
</CustomField>