force-app/main/default/objects/BusinessLicenseApplication/fields/Where_and_when_date_did_this_happen__c.field-meta.xml
<CustomField>
    <fullName>Where_and_when_date_did_this_happen__c</fullName>
    <label>Where and when (date) did this happen?</label>
    <type>TextArea</type>
</CustomField>