force-app/main/default/objects/BusinessLicenseApplication/fields/Where_and_when_did_this_occur__c.field-meta.xml
<CustomField>
    <fullName>Where_and_when_did_this_occur__c</fullName>
    <label>Where and when did this occur?</label>
    <type>TextArea</type>
</CustomField>