force-app/main/default/objects/BusinessLicenseApplication/recordTypes/Association.recordType-meta.xml
<RecordType>
    <fullName>Association</fullName>
    <active>true</active>
    <label>Association</label>
</RecordType>