force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CC_License.recordType-meta.xml
<RecordType>
    <fullName>CC_License</fullName>
    <active>true</active>
    <label>License</label>
</RecordType>