force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CC_Subsidy.recordType-meta.xml
<RecordType>
    <fullName>CC_Subsidy</fullName>
    <active>true</active>
    <label>Subsidy</label>
</RecordType>