force-app/main/default/objects/BusinessLicenseApplication/validationRules/CC_Required_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Required_Rejection_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &apos;Denied&apos;),
(ISPICKVAL(CC_Denial_Reason_Category__c,&apos;Other&apos;)||
ISPICKVAL(CC_Denial_Reason_Sub_Category__c,&apos;Other&apos;)
),
ISBLANK( CC_Rejection_Reason__c))</errorConditionFormula>
    <errorMessage>Please enter the Rejection Reason</errorMessage>
</ValidationRule>