force-app/main/default/objects/BusinessLicenseApplication/listViews/All_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>All_BusinessLicenseApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
</ListView>