force-app/main/default/objects/BusinessLicenseApplication/listViews/All_FFN_RCE_Applications.listView-meta.xml
<ListView>
    <fullName>All_FFN_RCE_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category</field>
        <operation>equals</operation>
        <value>License</value>
    </filters>
    <filters>
        <field>LicenseType</field>
        <operation>equals</operation>
        <value>Friend Family Neighbor (FFN) License,Relative Care Exempt (RCE) License</value>
    </filters>
    <label>All FFN/RCE Applications</label>
</ListView>