force-app/main/default/objects/BusinessLicenseApplication/listViews/All_Group_Home_Applications.listView-meta.xml
<ListView>
    <fullName>All_Group_Home_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category</field>
        <operation>equals</operation>
        <value>License</value>
    </filters>
    <filters>
        <field>LicenseType</field>
        <operation>equals</operation>
        <value>Group Home Child Care License</value>
    </filters>
    <label>All Group Home Applications</label>
</ListView>