force-app/main/default/objects/BusinessLicenseApplication/listViews/All_Out_of_State_provider_applications.listView-meta.xml
<ListView>
    <fullName>All_Out_of_State_provider_applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category</field>
        <operation>equals</operation>
        <value>License</value>
    </filters>
    <filters>
        <field>LicenseType</field>
        <operation>equals</operation>
        <value>Out of State</value>
    </filters>
    <label>All Out of State provider applications</label>
</ListView>