force-app/main/default/objects/BusinessLicenseApplication/listViews/All_Submitted_Applications.listView-meta.xml
<ListView>
    <fullName>All_Submitted_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Submitted Applications</label>
</ListView>